ISS-11-17-45 Initial Fix  Main Elements Alignment

--- a/styles/hpp-star.css
+++ b/styles/hpp-star.css
@@ -84,9 +84,11 @@
   .hpp-dtc-m-hero.hpp-star-section .content {
     /* margin-top: 30rem; */
     margin-bottom: 4rem;
+    padding: 0 15px;
   }
 
   .hpp-dtc-m-hero.internal-hero.sign-up-hero .content .pre-title {
+    left: 0;
     margin-top: 9rem;
   }
 
